# softwarelayervargard

./: .coverage  CMakeLists.txt  DEPENDENCY_FIX_SUMMARY.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_PROGRESS.md  DEVELOPMENT_TASK_LIST.md  Dockerfile.event  Dockerfile.inference  Dockerfile.sensor  FINAL_COMPLETION_SUMMARY.md  INSTALL_DEPENDENCIES.md  README.md  demo.html  designreq.md  docker-compose.dev.yml  docker-compose.yml  package.xml  requirements-no-ros.txt  requirements.txt  rules.yaml  sensors.yaml  setup.py  supervisor.sh  tasks.md
.github/workflows/: ci.yml
dashboard/: app.py  enhanced_app.py  enhanced_requirements.txt
deploy/helm/vargard/: Chart.yaml  values.yaml
deploy/helm/vargard/templates/: _helpers.tpl  deployment.yaml  service-event.yaml  service-inference.yaml  service-sensor.yaml
docs/: Makefile  architecture.md  cli.rst  conf.py  index.rst  tutorial.rst  tutorial2.rst  writing_plugins.rst
msg/: SensorFrame.msg
resource/: vargard_sensor_layer
security/: setup_security.sh
security/keystore/: .gitkeep
tests/: conftest.py  test_cli.py  test_event_manager.py  test_inference_engine.py  test_inference_interface.py  test_sensor_layer.py  test_sensor_manager.py  test_telemetry_node.py
vargard_core/: CMakeLists.txt  __init__.py  cli.py  event_manager.py  inference_node.py  inference_plugin.py  package.xml  rule_engine.py  setup.py  telemetry_node.py
vargard_core/alerts/: __init__.py  slack.py
vargard_core/launch/: __init__.py  demo_inference.launch.py
vargard_core/msg/: Alert.msg
vargard_core/plugins/: __init__.py  yolov5.py  yolov8.py
vargard_core/resource/: vargard_core
vargard_sensor_layer/: __init__.py  base_sensor.py  csi_camera.py  flir_sensor.py  ip_camera.py  radar_sensor.py  sensor_manager.py  sensor_node.py  usb_camera.py
vargard_sensor_layer/msg/: __init__.py
web/: .gitignore  README.md  package.json
web/components/: Layout.js
web/pages/: _app.js  alerts.js  events.js  index.js  live.js  plugins.js  rules.js  telemetry.js
