
<?xml version="1.0"?>
<package format="3">
  <name>vargard_sensor_layer</name>
  <version>0.1.0</version>
  <description>Modular sensor input layer for Vargard Core</description>
  <maintainer email="maintainer@example.com">Vargard Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>pyserial</exec_depend>
</package>